# task-management-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2bb25870d151_initial_migration.py
app/: main.py
app/api/v1/: tasks.py
app/core/: config.py  database.py
app/db/: base.py
app/models/: __init__.py  task.py
app/schemas/: __init__.py  task.py
app/services/: __init__.py  background_tasks.py  task_service.py
app/tests/: conftest.py
app/tests/integration/: test_api.py
app/tests/unit/: test_tasks.py
docker/: init.sql
